# HID-Emulated

./: Doxyfile  Doxyfile.in  README.md  meson.build
gtk/: app.cc  app.h  maintoolbar.cc  maintoolbar.h  mainwindow.cc  mainwindow.h
gtk/ui/: main_window.ui
src/: hiddevice.cc  hiddevice.h  hidmonitor.cc  hidmonitor.h  main.cc
tests/: meson.build  test_sanity.cc
